--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>springboot</groupId>
     <artifactId>OSMP-Version</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v2.0</version>
     <name>springboot-mybatis Mybatis Demo</name>
 
     <!-- Spring Boot 启动父依赖 -->
