--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,9 +10,9 @@ spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.secondary.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.secondary.url=jdbc:mysql://localhost:3306/dwpcfg?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.secondary.username=root
-spring.datasource.secondary.password=root
+spring.datasource.secondary.password=722799
 spring.datasource.secondary.max-idle=10 
 spring.datasource.secondary.max-wait=10000 
 spring.datasource.secondary.min-idle=5 
@@ -23,9 +23,9 @@ spring.datasource.secondary.test-while-idle=true
 spring.datasource.secondary.time-between-eviction-runs-millis=18800
 
 spring.datasource.bass.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.bass.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.bass.url=jdbc:mysql://localhost:3306/label?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.bass.username=root
-spring.datasource.bass.password=root
+spring.datasource.bass.password=722799
 spring.datasource.bass.max-idle=10 
 spring.datasource.bass.max-wait=10000 
 spring.datasource.bass.min-idle=5 
@@ -36,7 +36,7 @@ spring.datasource.bass.test-while-idle=true
 spring.datasource.bass.time-between-eviction-runs-millis=18800
 
 spring.datasource.coc.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.datasource.coc.url=jdbc:db2://192.168.76.128:50000/gis:currentSchema=SCCOC;
+spring.datasource.coc.url=jdbc:db2://192.168.110.129:50000/gis:currentSchema=SCCOC;
 spring.datasource.coc.username=db2inst1
 spring.datasource.coc.password=qwerasdf
 spring.datasource.coc.initial-size=5
