--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.http.multipart.maxRequestSize=1000Mb
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.secondary.url=jdbc:mysql://localhost:3306/dwpcfg?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.secondary.username=root
-spring.datasource.secondary.password=722799
+spring.datasource.secondary.password=root
 spring.datasource.secondary.max-idle=10 
 spring.datasource.secondary.max-wait=10000 
 spring.datasource.secondary.min-idle=5 
@@ -36,7 +36,7 @@ spring.datasource.bass.test-while-idle=true
 spring.datasource.bass.time-between-eviction-runs-millis=18800
 
 spring.datasource.coc.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.datasource.coc.url=jdbc:db2://192.168.110.129:50000/gis:currentSchema=SCCOC;
+spring.datasource.coc.url=jdbc:db2://192.168.191.4:50000/gis:currentSchema=SCCOC;
 spring.datasource.coc.username=db2inst1
 spring.datasource.coc.password=qwerasdf
 spring.datasource.coc.initial-size=5
