--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,23 +1,48 @@
-server.port=8092
+server.port=9533
 server.session-timeout=900
 server.display-name=application
-#server.contextPath=/OSMP
+server.context-path=/OSMP
 server.error.path=/error
 server.error.whitelabel.enabled=true
-logging.file=/logs/osmp.log
+logging.path=/data1/alarm/web/logs
 logging.level.com.asiainfo=DEBUG
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.secondary.url=jdbc:mysql://10.95.124.174:3306/dwpcfg?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.secondary.username=ocdc
-spring.datasource.secondary.password=abc@123
-spring.datasource.secondary.max-idle=10 
-spring.datasource.secondary.max-wait=10000 
-spring.datasource.secondary.min-idle=5 
-spring.datasource.secondary.initial-size=5 
-spring.datasource.secondary.validation-query=SELECT 1 
-spring.datasource.secondary.test-on-borrow=false 
-spring.datasource.secondary.test-while-idle=true 
+spring.datasource.secondary.url=jdbc:mysql://10.113.221.57:3306/monitor?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.secondary.username=aiapp
+spring.datasource.secondary.password=tFc_99w_
+spring.datasource.secondary.max-idle=10
+spring.datasource.secondary.max-wait=10000
+spring.datasource.secondary.min-idle=5
+spring.datasource.secondary.initial-size=5
+spring.datasource.secondary.validation-query=SELECT 1
+spring.datasource.secondary.test-on-borrow=false
+spring.datasource.secondary.test-while-idle=true
 spring.datasource.secondary.time-between-eviction-runs-millis=18800
+
+spring.datasource.bass.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.bass.url=jdbc:mysql://10.113.221.57:3306/monitor?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.bass.username=aiapp
+spring.datasource.bass.password=tFc_99w_
+spring.datasource.bass.max-idle=10
+spring.datasource.bass.max-wait=10000
+spring.datasource.bass.min-idle=5
+spring.datasource.bass.initial-size=5
+spring.datasource.bass.validation-query=SELECT 1
+spring.datasource.bass.test-on-borrow=false
+spring.datasource.bass.test-while-idle=true
+spring.datasource.bass.time-between-eviction-runs-millis=18800
+
+spring.datasource.coc.driver-class-name=com.ibm.db2.jcc.DB2Driver
+spring.datasource.coc.url=jdbc:db2://10.113.148.199:50000/BDXDB:currentSchema=SCCOC;
+spring.datasource.coc.username=aiapp
+spring.datasource.coc.password=9_x_xxGr
+spring.datasource.coc.initial-size=5
+spring.datasource.coc.min-idle=5
+spring.datasource.coc.max-idle=100
+spring.datasource.coc.max-wait=10000
+spring.datasource.coc.validation-query=values 1
+spring.datasource.coc.test-while-idle=true
+spring.datasource.coc.time-between-eviction-runs-millis=27800
