--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-        <dependency>  
+        <dependency>
             <groupId>org.apache.tomcat.embed</groupId>  
             <artifactId>tomcat-embed-jasper</artifactId>  
             <scope>provided</scope>  
@@ -90,7 +90,7 @@
 		      <artifactId>spring-boot-maven-plugin</artifactId>
 		      <version>1.3.5.RELEASE</version>
 		      <configuration>
-		        <mainClass>com.asiainfo.OMPStartup</mainClass>
+		        <mainClass>com.asiainfo.OSMPStartup</mainClass>
 		      </configuration>
 		      <executions>
 		        <execution>
@@ -113,10 +113,10 @@
             <!-- 打包时将jsp文件拷贝到META-INF目录下-->  
             <resource>  
                 <!-- 指定resources插件处理哪个目录下的资源文件 -->  
-                <directory>src/main/webapp</directory>  
+                <directory>src/main/webapp/WEB-INF/lib</directory>
                 <!--注意此次必须要放在此目录下才能被访问到-->  
-                <targetPath>META-INF/resources</targetPath>  
-                <includes>  
+                <targetPath>lib</targetPath>
+                <includes>
                     <include>**/**</include>  
                 </includes>  
             </resource>  
