--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,7 +25,7 @@ spring.datasource.secondary.time-between-eviction-runs-millis=18800
 spring.datasource.bass.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.bass.url=jdbc:mysql://localhost:3306/label?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.bass.username=root
-spring.datasource.bass.password=722799
+spring.datasource.bass.password=root
 spring.datasource.bass.max-idle=10 
 spring.datasource.bass.max-wait=10000 
 spring.datasource.bass.min-idle=5 
@@ -36,7 +36,7 @@ spring.datasource.bass.test-while-idle=true
 spring.datasource.bass.time-between-eviction-runs-millis=18800
 
 spring.datasource.coc.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.datasource.coc.url=jdbc:db2://192.168.191.1:50000/gis:currentSchema=SCCOC;
+spring.datasource.coc.url=jdbc:db2://192.168.191.5:50000/gis:currentSchema=SCCOC;
 spring.datasource.coc.username=db2inst1
 spring.datasource.coc.password=qwerasdf
 spring.datasource.coc.initial-size=5
