--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,9 @@
 server.port=8092
 server.session-timeout=900
+security.user.name=sccc
+security.user.password=sccc
 server.display-name=application
-#server.contextPath=/OSMP
+server.contextPath=/OSMP
 server.error.path=/error
 server.error.whitelabel.enabled=true
 logging.file=/logs/osmp.log
@@ -36,7 +38,7 @@ spring.datasource.bass.test-while-idle=true
 spring.datasource.bass.time-between-eviction-runs-millis=18800
 
 spring.datasource.coc.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.datasource.coc.url=jdbc:db2://192.168.191.5:50000/gis:currentSchema=SCCOC;
+spring.datasource.coc.url=jdbc:db2://192.168.191.4:50000/gis:currentSchema=SCCOC;
 spring.datasource.coc.username=db2inst1
 spring.datasource.coc.password=qwerasdf
 spring.datasource.coc.initial-size=5
