--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,9 +10,9 @@ spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.secondary.url=jdbc:mysql://10.113.221.57:3306/monitor?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.secondary.username=aiapp
-spring.datasource.secondary.password=tFc_99w_
+spring.datasource.secondary.url=jdbc:mysql://10.95.124.174:3306/dwpcfg?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.secondary.username=ocdc
+spring.datasource.secondary.password=abc@123
 spring.datasource.secondary.max-idle=10
 spring.datasource.secondary.max-wait=10000
 spring.datasource.secondary.min-idle=5
